[#15362] Remove 13.0 deprecations